# Task_management_server

./: CMakeLists.txt  Readme.md
src/: main.cpp
src/controllers/: task_controller.cpp  task_controller.h  user_controller.cpp  user_controller.h
src/database/: database.cpp  database.h
src/models/: task_model.cpp  task_model.h  user_model.cpp  user_model.h
